--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 # Base url (ORIGINAL=http://localhost:3000)
-VITE_API_BASE_URL=https://video-hub-backend.onrender.com
+VITE_API_BASE_URL=http://localhost:3000
